# twitter-stream-analyzer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
src/: agg.py  main.py
