[tool.poetry]
name = "twitter-stream-analyzer"
version = "0.1.0"
description = ""
authors = ["masashi kishimoto <drehbleistift@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.0.2"
SudachiPy = "^0.6.3"
SudachiDict-core = "^20211220"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.3.2"
memory-profiler = "^0.60.0"
matplotlib = "^3.5.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
